@@ -736,6 +736,8 @@ ags_add_soundcard_get_type
 ags_add_soundcard_new
 ags_add_audio_signal_get_type
 ags_add_audio_signal_new
+ags_tic_soundcard_get_type
+ags_tic_soundcard_new
 ags_open_sf2_sample_get_type
 ags_open_sf2_sample_new
 ags_remove_recall_container_get_type
