@@ -1,3 +1,8 @@
+ags (0.7.105)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* implemented AgsTicSoundcard task and fixed thereby data-race
+
 ags (0.7.104)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
